--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -1,5 +1,19 @@
 <h1>{{ question.subject }}</h1>
-
+<!-- question content-->
 <div>
     {{ question.content }}
 </div>
+<!-- answer list -->
+<h5>{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
+<div>
+    <ul>
+        {% for answer in question.answer_set %}
+        <li>{{ answer.content }}</li>
+        {% endfor %}
+    </ul>
+</div>
+<!-- answer form -->
+<form action="{{ url_for('answer.create', question_id=question.id) }}" method="post">
+    <textarea name="content" id="content" rows="15"></textarea>
+    <input type="submit" value="답변등록">
+</form>
