--- a/pybo/templates/question/question_detail.html
+++ b/pybo/templates/question/question_detail.html
@@ -1,19 +1,54 @@
-<h1>{{ question.subject }}</h1>
-<!-- question content-->
-<div>
-    {{ question.content }}
-</div>
-<!-- answer list -->
-<h5>{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
-<div>
-    <ul>
-        {% for answer in question.answer_set %}
-        <li>{{ answer.content }}</li>
+<!-- static style -->
+<!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+
+<!-- booststrap -->
+<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+
+{% extends 'base.html' %}
+{% block content %}
+<div class="container my-3">
+    <!-- question subject -->
+    <h2 class="border-bottom py-2">{{ question.subject }}</h2>
+    <!-- question content-->
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="d-flex justify-content-end">
+                <div class="badge badge-light p-2">
+                    {{ question.create_date }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- answer list -->
+    <h5 class="border-bottom my-3 py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
+    {% for answer in question.answer_set %}
+    <div class="card my-3">
+        <div class="card-body">
+            <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+            <div class="d-flex justify-content-end">
+                <div class="badge badge-light p-2">
+                    {{ answer.create_date }}
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    <!-- answer form -->
+    <form action="{{ url_for('answer.create', question_id=question.id) }}" method="post" class="my-3">
+        {{ form.csrf_token }}
+
+        <!-- error check -->
+        {% for field, errors in form.errors.items() %}
+        <div class="alert alert-danger" role="alert">
+            <strong>{{ form[field].label }}</strong>: {{ ', '.join(errors) }}
+        </div>
         {% endfor %}
-    </ul>
+
+        <div class="form-group">
+            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+        </div>
+        <input type="submit" value="답변등록" class="btn btn-primary">
+    </form>
 </div>
-<!-- answer form -->
-<form action="{{ url_for('answer.create', question_id=question.id) }}" method="post">
-    <textarea name="content" id="content" rows="15"></textarea>
-    <input type="submit" value="답변등록">
-</form>
+{% endblock %}
