--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -90,5 +90,6 @@
 
     <!-- create new question -->
     <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
+    <a href="{{ url_for('file.upload') }}" class="btn btn-primary">파일 올리기</a>
 </div>
 {% endblock %}
