searching and sorting

--- a/pybo/templates/file/file_form.html
+++ b/pybo/templates/file/file_form.html
@@ -15,7 +15,7 @@
         <!-- file select and upload -->
         <div class="form-group">
             <label for="file">select a file : </label><br>
-            <input type="file" name="file" id="file">
+            <input type="file" name="file" id="file" multiple="multiple">
         </div>
         <button type="submit" class="btn btn-primary">Upload</button>
     </form>
