--- a/pybo/templates/question/question_list.html
+++ b/pybo/templates/question/question_list.html
@@ -5,6 +5,24 @@
 {% block content %}
 <!-- question list -->
 <div class="container my-3">
+    <div class="row justify-content-between my-3">
+        <!-- sorting area -->
+        <div class="col-2">
+            <select class="form-control so">
+                <option value="recent" {% if so=='recent' %}selected{% endif %}>최신순</option>
+                <option value="recommend" {% if so=='recommend' %}selected{% endif %}>추천순</option>
+                <option value="popular" {% if so=='popular' %}selected{% endif %}>인기순</option>
+            </select>
+        </div>
+        <!-- search area -->
+        <div class="col-4 input-group">
+            <input type="text" class="form-control kw" value="{{ kw or '' }}">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+            </div>
+        </div>
+    </div>
+
     <table class="table">
         <thead>
             <tr class="text-center thead-dark">
@@ -50,7 +68,7 @@
         <!-- prev page -->
         {% if question_list.has_prev %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.prev_num }}">이전</a>
+            <a class="page-link" data-page="{{ question_list.prev_num }}" href="#">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -62,7 +80,7 @@
         {% if page_num %}
         {% if page_num != question_list.page %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+            <a class="page-link" data-page="{{ page_num }}" href="#">{{ page_num }}</a>
         </li>
         {% else %}
         <li class="page-item active" aria-current="page">
@@ -79,7 +97,7 @@
         <!-- next page -->
         {% if question_list.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.next_num }}">다음</a>
+            <a class="page-link" data-page="{{ question_list.next_num }}" href="#">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -92,4 +110,33 @@
     <a href="{{ url_for('question.create') }}" class="btn btn-primary">질문 등록하기</a>
     <a href="{{ url_for('file.upload') }}" class="btn btn-primary">파일 올리기</a>
 </div>
+
+<!-- searchform for get page & kw & so -->
+<form id="searchForm" method="get" action="{{ url_for('question._list') }}">
+    <input type="hidden" id="kw" name="kw" value="{{ kw or '' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+    <input type="hidden" id="so" name="so" value="{{ so }}">
+</form>
+{% endblock %}
+
+<!-- paging and search script -->
+{% block script %}
+<script type='text/javascript'>
+    $(document).ready(function () {
+        $(".page-link").on('click', function () {
+            $("#page").val($(this).data("page"));
+            $("#searchForm").submit();
+        });
+        $("#btn_search").on('click', function () {
+            $("#kw").val($(".kw").val());
+            $("#page").val(1); // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+            $("#searchForm").submit();
+        });
+        $(".so").on('change', function () {
+            $("#so").val($(this).val());
+            $("#page").val(1);
+            $("#searchForm").submit();
+        });
+    });
+</script>
 {% endblock %}
